add support for cookie

--- a/admin/angular.html
+++ b/admin/angular.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="pl">
     <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Admin</title>
         <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.2/angular.min.js"></script>
     </head>
