--- a/babylon/babylon.html
+++ b/babylon/babylon.html
@@ -49,10 +49,10 @@
                 var light = new BABYLON.HemisphericLight('light1', new BABYLON.Vector3(0,1,0), scene);
 
                 // create a built-in "sphere" shape; its constructor takes 5 params: name, width, depth, subdivisions, scene
-                var sphere = BABYLON.Mesh.CreateSphere('sphere1', 16, 2, scene);
+                var box = BABYLON.Mesh.CreateBox('box',2 , scene);
 
                 // move the sphere upward 1/2 of its height
-                sphere.position.y = 1;
+                box.position.y = 2;
 
                 // create a built-in "ground" shape; its constructor takes the same 5 params as the sphere's one
                 var ground = BABYLON.Mesh.CreateGround('ground1', 6, 6, 2, scene);
@@ -66,6 +66,8 @@
 
             // run the render loop
             engine.runRenderLoop(function(){
+                scene.getMeshByName("box").position.z +=1;
+                scene.getMeshByName("box").position.y +=0.1;
                 scene.render();
             });
 
@@ -73,7 +75,7 @@
             window.addEventListener('resize', function(){
                 engine.resize();
             });
-        });
+        });     
     </script>
 </body>
 </html>
