--- a/public/js/angular/admin.html
+++ b/public/js/angular/admin.html
@@ -15,6 +15,7 @@
             <ul>
                 <a href="admin/home"><li>Home</li></a>
                 <a href="admin/home/about"><li>About</li></a>
+                <a href="admin/home/login"><li>Logout</li></a>
             </ul>
             <div ng-view>
                 
